# NfsTest

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/evideo/nfsprovider/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/jni_helper/: JavaClassCache.c  JavaClassCache.cpp  JavaClassCache.h  JniHelper.c  JniHelper.cpp  JniHelper.h
app/src/main/cpp/logger/: logger.h
app/src/main/cpp/nfs_client/: NfsClient.c  NfsClient.cpp  NfsClient.h
app/src/main/cpp/nfs_include/: libnfs-zdr.h  libnfs.h
app/src/main/cpp/nfsc/: libnfs-raw.h
app/src/main/java/com/evideo/nfsprovider/: MainActivity.java
app/src/main/java/com/evideo/nfsprovider/base/: DirectoryEntry.java
app/src/main/java/com/evideo/nfsprovider/file/: FileType.java  FileTypeManager.java
app/src/main/java/com/evideo/nfsprovider/httpd/: IStreamer.java  NanoHTTPD.java  NanoStreamer.java  NfsFile.java  NfsFileInputStream.java
app/src/main/java/com/evideo/nfsprovider/manager/: DefaultNfsManager.java  NfsManager.java  NfsMount.java
app/src/main/java/com/evideo/nfsprovider/model/: NfsDevice.java  NfsFolder.java
app/src/main/java/com/evideo/nfsprovider/nativefacade/: CredentialCache.java  NativeNfsFacade.java  NfsClient.java  NfsFile.java  SambaDir.java  SmbDir.java  SmbFile.java
app/src/main/java/com/evideo/nfsprovider/other/: filemanager.rar  nfsprobe  readme.txt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/evideo/nfsprovider/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
